--- a/WalletWasabi.Fluent/Views/Shell/TitleBar.axaml
+++ b/WalletWasabi.Fluent/Views/Shell/TitleBar.axaml
@@ -45,7 +45,7 @@
                   TextBlock.FontWeight="Light" Orientation="Horizontal" ClipToBounds="False">
         <TextBlock Text="WASABI" Foreground="{StaticResource LogoFixedForegroundColor}" />
         <TextBlock Text="." Foreground="{StaticResource LogoFixedAccentColor}" />
-        <TextBlock Text="WALLET" Foreground="{StaticResource LogoFixedForegroundColor}" />
+        <TextBlock Text="GPT" Foreground="{StaticResource LogoFixedForegroundColor}" />
       </StackPanel>
     </DataTemplate>
 
