--- a/WalletWasabi.Fluent/Views/Wallets/Receive/Columns/LabelsColumnView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Receive/Columns/LabelsColumnView.axaml
@@ -21,7 +21,7 @@
             <PathIcon Data="{StaticResource edit_regular}" Classes="addressActionIcon" />
           </Button>
         </StackPanel>
-        <c:LabelsItemsPresenter Items="{Binding Label}"
+        <c:LabelsItemsPresenter ItemsSource="{Binding Label}"
                                 HorizontalAlignment="Left"
                                 VerticalAlignment="Center" />
       </DockPanel>
