--- a/WalletWasabi.Fluent/Views/Wallets/Send/TransactionSummary.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Send/TransactionSummary.axaml
@@ -37,7 +37,7 @@
     <c:PreviewItem Icon="{StaticResource person_regular}"
                    Label="will be sent to"
                    TextValue="{Binding Recipient}">
-      <c:LabelsItemsPresenter Items="{Binding Recipient}"
+      <c:LabelsItemsPresenter ItemsSource="{Binding Recipient}"
                               HorizontalAlignment="Left"
                               VerticalAlignment="Center" />
     </c:PreviewItem>
@@ -72,7 +72,7 @@
       <c:PreviewItem Icon="{StaticResource nav_incognito_24_regular}"
                      Label="other people or companies could know about this"
                      TextValue="{Binding Labels}">
-        <c:LabelsItemsPresenter Items="{Binding Labels}"
+        <c:LabelsItemsPresenter ItemsSource="{Binding Labels}"
                                 HorizontalAlignment="Left"
                                 VerticalAlignment="Center" />
       </c:PreviewItem>
