--- a/WalletWasabi.Fluent/Views/CoinJoinProfiles/CoinJoinProfilesView.axaml
+++ b/WalletWasabi.Fluent/Views/CoinJoinProfiles/CoinJoinProfilesView.axaml
@@ -25,7 +25,7 @@
               VerticalAlignment="Bottom"
               Content="Customize" />
 
-      <ListBox Items="{Binding Profiles}" SelectedItem="{Binding SelectedProfile}" Background="Transparent"
+      <ListBox ItemsSource="{Binding Profiles}" SelectedItem="{Binding SelectedProfile}" Background="Transparent"
                ScrollViewer.VerticalScrollBarVisibility="Disabled">
         <ListBox.Styles>
           <Style Selector="ListBoxItem">
