--- a/WalletWasabi.Fluent/Views/SearchBar/SearchBarDropdown.axaml
+++ b/WalletWasabi.Fluent/Views/SearchBar/SearchBarDropdown.axaml
@@ -113,12 +113,12 @@
 
   <Panel VerticalAlignment="Center">
     <TextBlock IsVisible="{Binding !HasResults^, FallbackValue=False}" Margin="10">No results</TextBlock>
-    <ItemsControl IsVisible="{Binding HasResults^}" Items="{Binding Groups}">
+    <ItemsControl IsVisible="{Binding HasResults^}" ItemsSource="{Binding Groups}">
       <ItemsControl.ItemTemplate>
         <DataTemplate DataType="{x:Type sb:SearchItemGroup}">
           <DockPanel Margin="0 0 0 10">
             <TextBlock Text="{Binding Title}" DockPanel.Dock="Top" />
-            <ItemsControl x:Name="ListBox" Items="{Binding Items}" />
+            <ItemsControl x:Name="ListBox" ItemsSource="{Binding Items}" />
           </DockPanel>
         </DataTemplate>
       </ItemsControl.ItemTemplate>
