--- a/WalletWasabi.Fluent/Views/Wallets/Home/WalletTiles.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Home/WalletTiles.axaml
@@ -9,7 +9,7 @@
              x:DataType="collections:IEnumerable">
 
   <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Disabled">
-    <ItemsControl Items="{Binding}">
+    <ItemsControl ItemsSource="{Binding}">
       <ItemsControl.ItemsPanel>
         <ItemsPanelTemplate>
           <WrapPanel ItemWidth="310" ItemHeight="140" />
