--- a/WalletWasabi.Fluent/Views/CoinControl/Core/Cells/LabelsCellView.axaml
+++ b/WalletWasabi.Fluent/Views/CoinControl/Core/Cells/LabelsCellView.axaml
@@ -32,7 +32,7 @@
   </UserControl.Styles>
 
   <controls:LabelsItemsPresenter
-    Items="{Binding Labels}"
+    ItemsSource="{Binding Labels}"
     Classes.NonPrivate="{Binding IsNonPrivate}"
     Classes.SemiPrivate="{Binding IsSemiPrivate}"
     Classes.Private="{Binding IsPrivate}" />
