--- a/WalletWasabi.Fluent/Views/Wallets/Home/Tiles/PrivacyRing/PrivacyRingView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Home/Tiles/PrivacyRing/PrivacyRingView.axaml
@@ -67,7 +67,7 @@
                  ScrollViewer.HorizontalScrollBarVisibility="Disabled">
     <DockPanel>
 
-      <ItemsControl Items="{Binding References}"
+      <ItemsControl ItemsSource="{Binding References}"
                     DockPanel.Dock="Bottom" HorizontalAlignment="Center" Margin="0 10 0 0" Height="50">
         <ItemsControl.ItemsPanel>
           <ItemsPanelTemplate>
@@ -103,7 +103,7 @@
           </ir:AdaptiveBehavior>
         </i:Interaction.Behaviors>
 
-        <ListBox Items="{Binding Items}" ClipToBounds="False"
+        <ListBox ItemsSource="{Binding Items}" ClipToBounds="False"
                  SelectedItem="{Binding SelectedItem}"
                  x:Name="Ring" Margin="{Binding Margin}">
           <i:Interaction.Behaviors>
