--- a/WalletWasabi.Fluent/Views/NavBar/NavBar.axaml
+++ b/WalletWasabi.Fluent/Views/NavBar/NavBar.axaml
@@ -136,7 +136,7 @@
     <!-- Wallet List -->
     <ListBox Items="{Binding Wallets}" SelectionMode="AlwaysSelected">
       <ListBox.DataTemplates>
-        <DataTemplate DataType="vmw:WalletViewModelBase">
+        <DataTemplate DataType="vmw:NavBarWalletStateViewModel">
           <c:FadeOutTextBlock Classes="h9" Text="{Binding Title}" />
         </DataTemplate>
       </ListBox.DataTemplates>
