--- a/WalletWasabi.Fluent/Views/NavBar/NavBar.axaml
+++ b/WalletWasabi.Fluent/Views/NavBar/NavBar.axaml
@@ -134,10 +134,13 @@
     <Separator DockPanel.Dock="Bottom" />
 
     <!-- Wallet List -->
-    <ListBox Items="{Binding Wallets}" SelectionMode="AlwaysSelected">
+    <ListBox Items="{Binding Wallets}" SelectionMode="AlwaysSelected" SelectedItem="{Binding SelectedWallet}">
       <ListBox.DataTemplates>
         <DataTemplate DataType="vmw:NavBarWalletStateViewModel">
-          <c:FadeOutTextBlock Classes="h9" Text="{Binding Title}" />
+          <StackPanel>
+            <c:FadeOutTextBlock Classes="h9" Text="{Binding IsSelected, Mode=OneWay}" />
+            <c:FadeOutTextBlock Classes="h9" Text="{Binding Title}" />
+          </StackPanel>
         </DataTemplate>
       </ListBox.DataTemplates>
     </ListBox>
