Part5 - NavBar.xaml

--- a/WalletWasabi.Fluent/Views/NavBar/NavBar.axaml
+++ b/WalletWasabi.Fluent/Views/NavBar/NavBar.axaml
@@ -133,8 +133,12 @@
     <!-- Separator -->
     <Separator DockPanel.Dock="Bottom" />
 
+    <TextBlock DockPanel.Dock="Bottom" Text="{Binding SelectedWallet.Title}" />
     <!-- Wallet List -->
-    <ListBox Items="{Binding Wallets}" SelectionMode="AlwaysSelected" SelectedItem="{Binding SelectedWallet}">
+    <ListBox Items="{Binding Wallets}"
+             SelectionMode="AlwaysSelected"
+             VirtualizationMode="None"
+             SelectedItem="{Binding SelectedWallet}">
       <ListBox.DataTemplates>
         <DataTemplate DataType="vmw:NavBarWalletStateViewModel">
           <StackPanel>
