--- a/WalletWasabi.Fluent/Views/Wallets/Home/History/Details/TransactionDetailsView.axaml
+++ b/WalletWasabi.Fluent/Views/Wallets/Home/History/Details/TransactionDetailsView.axaml
@@ -16,8 +16,8 @@
       <!-- Date -->
       <c:PreviewItem Icon="{StaticResource timer_regular}"
                      Label="Date / Time"
-                     TextValue="{Binding Date, StringFormat='{}{0:MM/dd/yyyy HH:mm}', Mode=OneWay}">
-        <TextBlock Text="{Binding Date, StringFormat='{}{0:MM/dd/yyyy HH:mm}', Mode=OneWay}" Classes="monoSpaced" />
+                     TextValue="{Binding DateString, Mode=OneWay}">
+        <TextBlock Text="{Binding DateString, Mode=OneWay}" Classes="monoSpaced" />
       </c:PreviewItem>
 
       <Separator />
