--- a/WalletWasabi.Fluent/Controls/TagsBox.axaml
+++ b/WalletWasabi.Fluent/Controls/TagsBox.axaml
@@ -36,28 +36,11 @@
       <ControlTemplate>
         <DataValidationErrors>
           <DockPanel x:Name="PART_DockPanel">
-            <ItemsControl Items="{TemplateBinding TopItems}"
-                          IsVisible="{TemplateBinding TopItems, Converter={x:Static ObjectConverters.IsNotNull}}"
-                          ClipToBounds="False"
-                          Margin="0,10,0,0"
-                          DockPanel.Dock="Bottom">
-              <ItemsControl.ItemsPanel>
-                <ItemsPanelTemplate>
-                  <WrapPanel Orientation="Horizontal" />
-                </ItemsPanelTemplate>
-              </ItemsControl.ItemsPanel>
-              <ItemsControl.ItemTemplate>
-                <DataTemplate>
-                  <Button Classes="activeHyperLink"
-                          Margin="0,0,6,0"
-                          Focusable="False"
-                          Content="{Binding}"
-                          Command="{Binding #PART_DockPanel.TemplatedParent.AddTag}"
-                          CommandParameter="{Binding }"
-                          x:CompileBindings="False" />
-                </DataTemplate>
-              </ItemsControl.ItemTemplate>
-            </ItemsControl>
+            <c:TagsBoxTopItemsPresenter TopItems="{TemplateBinding TopItems}"
+                                        AddTagCommand="{Binding $parent[c:TagsBox].AddTag}"
+                                        Margin="0,10,0,0"
+                                        DockPanel.Dock="Bottom"
+                                        x:CompileBindings="False" />
             <Border x:Name="PART_Border" Background="{TemplateBinding Background}"
                     BorderBrush="{TemplateBinding BorderBrush}"
                     BorderThickness="{TemplateBinding BorderThickness}"
