--- a/WalletWasabi.Fluent/Controls/TagsBoxTopItemsPresenter.axaml
+++ b/WalletWasabi.Fluent/Controls/TagsBoxTopItemsPresenter.axaml
@@ -1,7 +1,23 @@
 <Styles xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:c="clr-namespace:WalletWasabi.Fluent.Controls">
-
+        xmlns:c="clr-namespace:WalletWasabi.Fluent.Controls"
+        xmlns:generic="clr-namespace:System.Collections.Generic;assembly=System.Collections"
+        xmlns:system="clr-namespace:System;assembly=System.Runtime">
+  <Design.PreviewWith>
+    <Panel>
+      <Border Margin="10">
+        <c:TagsBoxTopItemsPresenter>
+          <c:TagsBoxTopItemsPresenter.TopItems>
+            <generic:List x:TypeArguments="system:String">
+              <system:String>Label1</system:String>
+              <system:String>Label2</system:String>
+              <system:String>Label3</system:String>
+            </generic:List>
+          </c:TagsBoxTopItemsPresenter.TopItems>
+        </c:TagsBoxTopItemsPresenter>
+      </Border>
+    </Panel>
+  </Design.PreviewWith>
   <Style Selector="c|TagsBoxTopItemsPresenter">
     <Setter Property="Foreground" Value="{DynamicResource TextControlForeground}" />
     <Setter Property="Background" Value="{DynamicResource TextControlBackground}" />
