--- a/WalletWasabi.Fluent/Views/AddWallet/Create/RecoveryWordsView.axaml
+++ b/WalletWasabi.Fluent/Views/AddWallet/Create/RecoveryWordsView.axaml
@@ -24,10 +24,10 @@
         <RowDefinition Height="20" />
       </Grid.RowDefinitions>
 
-      <Panel Grid.Row="2" VerticalAlignment="Center" HorizontalAlignment="Center">
+      <Panel Grid.Row="2" VerticalAlignment="Center" HorizontalAlignment="Center" Background="Transparent">
         <Panel.ContextMenu>
           <ContextMenu>
-            <MenuItem Header="Copy to clipboard"
+            <MenuItem Header="Copy recovery words"
                       Command="{Binding CopyToClipboardCommand}">
               <MenuItem.Icon>
                 <PathIcon Data="{StaticResource clipboard_text_regular}" />
